--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "mysql2": "^3.9.7",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
